<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/aqua_shots_user"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#086680"
            android:text="NOTIFICATION SETTINGS"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="27sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="133dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <DatePicker
                android:id="@+id/datePicker2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="-30dp"
                android:layout_marginRight="-30dp"
                android:layout_weight="1"
                android:calendarTextColor="#086680"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:forceDarkAllowed="false"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:theme="@style/Theme.Material3.Light" />

            <TimePicker
                android:id="@+id/timePicker2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="-30dp"
                android:layout_marginRight="-30dp"
                android:layout_weight="1"
                android:amPmBackgroundColor="#086680"
                android:amPmTextColor="#086680"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:theme="@style/Theme.Material3.Light"
                android:timePickerMode="spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_date"
                android:textAlignment="center"
                android:textColor="#086680"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_time"
                android:textAlignment="center"
                android:textColor="#086680"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="88dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#086680"
            android:text="@string/schedule_notification" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>